# fastapi-auth-service

./: README.md  pyproject.toml  sql_app.db
src/: main.py  sql_app.db
src/app/apis/: user.py
src/app/models/: post.py  user.py
src/app/schemas/: post.py  user.py
src/app/services/: post_service.py  user_service.py
src/app/utils/: security.py
