[project]
name = "fastapi-auth-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "griotold", email = "gotjd9773@naver.com"},
]
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.44",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0"  # ← 이 줄 추가
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = {cmd = "uvicorn main:app --reload", env = {PYTHONPATH = "src"}}